[package]
name = "hero-api"
version = "0.1.0"
authors = ["Aleksandr Gamble <aleksandr.gamble@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Rocket launches a http server
rocket = "0.4.4"
#rocket_codegen = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]